<?xml version="1.0" encoding="UTF-8"?>
<!--
 Copyright (C) 2010 ZXing authors
 Copyright 2011 Robert Theis

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<resources>

    <string name="app_name">PDA Project</string>
    <string name="mapMain">MAP</string>
    <string name="ocrMain">OCR</string>
    <string name="exitMain">EXIT</string>
    <string name="printerMain">PRINTER</string>
    <string name="title_activity_google_map">GoogleMap</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_router">Router</string>
    <string name="title_activity_all_product">AllProduct</string>
    <string name="title_activity_main_product">MainProduct</string>
    <string name="title_activity_new_product">NewProduct</string>
    <string name="title_activity_bar_code">BarCode</string>
    <string name="setting">Setting</string>
    <string name="ocr">Ocr</string>
    <string name="cart">Cart</string>
    <string name="lang">Language</string>
    <string name="exit">Exit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="version">Version</string>
    <string name="processing">Processing</string>
    <string name="pls_wait">Please wait</string>
    <string name="no_sdcard">Can\'t use SD card.</string>
    <string name="write_file_err">Can\'t write file.</string>
    <string name="auto_update_on">Check update-ON</string>
    <string name="auto_update_off">Check update-OFF</string>
    <string name="update_title">Update Available</string>
    <string name="update_tip">An update for is available!\nDo you want to update now?</string>
    <string name="submit_title">Submit Confirm</string>
    <string name="submit_msg">Do you want to submit now?</string>
    <string name="exit_confirm">Press again to exit</string>
    <string name="lang_title">Choose Language</string>
    <string name="mac">Mac</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="size">Size</string>
    <string name="speed">Speed</string>
    <string name="density">Density</string>
    <string name="sensor">Sensor</string>
    <string name="distance">Distance</string>
    <string name="offset">Offset</string>
    <string name="save">Save</string>
    <string name="database_new">New Product</string>
    <string name="database_update">Update</string>
    <string name="database_delete">Delete</string>
    <string name="table">Table</string>
    <string name="input_table">Input Table</string>
    <string name="id">Id</string>
    <string name="id_product">Id Product</string>
    <string name="row">Row</string>
    <string name="number_row">number row</string>
    <string name="delete_table">Delete Table</string>
    <string name="product">Product</string>
    <string name="id_ware">Id Ware</string>
    <string name="name_ware">Name Ware</string>
    <string name="sold">Sold</string>
    <string name="reserver">Resever</string>
    <string name="stock">Stock</string>
    <string name="liq">Liquidate</string>
    <string name="back">Back</string>
    <string name="map">Map</string>
    <string name="barcode">BarCode</string>
    <string name="inventory_control">INVENTORY CONTROL</string>
    <string name="database">Database</string>
    <string name="myAccount">My Account</string>
    <string name="setting_">SETTING</string>
    <string name="exit_">EXIT</string>
    <string name="ware">Ware</string>
    <string name="group">Group</string>  
    <string name="id_group">Id Group</string>  
	<string name="name_group">Name Group</string>  
	<string name="name_product">Name Product</string>
	<string name="number_sold">Number Sold</string>  
	<string name="number_reserver">Number Reserver</string>  
	<string name="number_stock">Number Stock</string>  
	<string name="number_liq">Number Liquidated</string> 
	 <string name="my_location">My Location</string>
	 <string name="addree_to">Nhập địa điểm đến</string> 
	 <string name="driving">Driving</string> 
	 <string name="walking">Walking</string> 
	 <string name="by_bus">By Bus</string> 
	 <string name="find">Find</string> 
	 <string name="status">Status</string>
	 <string name="create_product">Create Product</string>
	 <string name="search">Search</string>
	 <string name="order">Order</string>
	 <string name="invoice">Invoice</string>
	 <string name="name">Name</string>
	 <string name="sold_">Sol:</string>
	 <string name="reserver_">Res:</string>
    <string name="stock_">Sto:</string>
    <string name="liq_">Liq:</string>
    <string name="home">Home</string>
    <string name="wishlist">WishList</string>
    <string name="invoice_manager">Invoice Manager</string>
    <string name="human_resouce_manager">Human Resource Management</string>
    <string name="order_manager">Order Manager</string>
    <string name="number_0">0</string>
    <string name="search_hint">Search products</string>
    <string name="search_product">Search Product</string>
    <string name="refine">Refine</string>
    <string name="norecords">No product available</string>
    <string name="dealname">Deal Name</string>
    <string name="start_price">$600</string>
    <string name="final_price">$270</string>
    <string name="instock">In Stock</string>
    <string name="add_to_cart">Add To Card</string>
    <string name="share">Share</string>
    <string name="cart_">CART</string>
    <string name="edit">Edit</string>
    <string name="qty">Qty</string>
    <string name="price">Price</string>
    <string name="goods">Goods</string>
    <string name="saletool_ecommerce">SaleTool eCommerce</string>
    <string-array name="lang_list">
        
       
       
       
        <item>English</item>
        <item>Simplified Chinese</item>
        <item>Traditional Chinese</item>
    </string-array>
    <string name="save_msg">Save successfully, file name is</string>
    <string name="title_activity_edit_product">EditProduct</string>
    <string name="title_activity_delete_database">DeleteDatabase</string>
    <string name="title_activity_config_printer">ConfigPrinter</string>
    <string name="title_activity_goods_search">GoodsSearch</string>
    <string name="title_activity_sale">Sale</string>
    <string name="title_activity_database">Database</string>
    <string name="title_activity_delete_table">DeleteTable</string>
    <string name="title_activity_search">Search</string>
  

</resources>
