<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.sfsu.cs.orange.ocr.Sale" >

    <item
        android:id="@+id/sale_menu_main"
        android:orderInCategory="100"
        android:icon="@drawable/ic_launcher"
        android:title="@string/home"
        android:showAsAction="ifRoom"
        app:showAsAction="always">
        <menu>
            <item 
                android:id="@+id/sale_menu_home" 
                android:title="@string/home"/>
            <item 
                android:id="@+id/sale_menu_order" 
                android:title="@string/order_manager"/>
            <item 
                android:id="@+id/sale_menu_invoice" 
                android:title="@string/invoice_manager"/>
            <item 
                android:id="@+id/sale_menu_worker"
                android:title="@string/human_resouce_manager"/>
            
        </menu>
    </item>
    <item 
        android:id="@+id/sale_search"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_search"
        android:title="@string/search"
        app:showAsAction="always"/>
</menu>
