<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/searchbackground"
    tools:context="edu.sfsu.cs.orange.database.NewProduct"
    >
    <include android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/banner"/>
    <ScrollView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout 
            android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:orientation="vertical">
        <LinearLayout
        android:id="@+id/layout_1" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"     
        android:orientation="horizontal">
        <TextView 
            android:layout_width="70.0dip"
            android:textSize="20sp"
            android:textColor="@color/red"
            android:layout_height="wrap_content"
            android:text="@string/ware"/>
        <EditText 
		    android:textSize="@dimen/text_size_2" 
		    android:layout_height="40.0dip" 
		    android:layout_width="0dip"
		    android:textColor="@color/black" 
		    android:id="@+id/id_ware" 
		    android:background="@drawable/search" 
		    android:paddingLeft="29.0dip" 
		    android:focusable="true" 
		    android:maxLines="1"
		    android:paddingRight="5.0dip"
		    android:hint="@string/id_ware" 
		    android:layout_weight="0.9"  />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_2" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_marginTop="3.0dip"    
        android:orientation="horizontal">
        <TextView 
            android:layout_width="70.0dip"
            android:textSize="20sp"
            android:textColor="@color/red"
            android:layout_height="wrap_content"
            android:text="@string/name"/>
        <EditText 
		    android:textSize="@dimen/text_size_2" 
		    android:layout_height="35.0dip" 
		    android:layout_width="0dip"
		    android:textColor="@color/black" 
		    android:id="@+id/name_ware" 
		    android:background="@drawable/search" 
		    android:paddingLeft="29.0dip" 
		    android:focusable="true" 
		    android:maxLines="1"
		    android:paddingRight="5.0dip"
		    android:hint="@string/name_ware" 
		    android:layout_weight="0.9"  />
    </LinearLayout>
	<LinearLayout
        android:id="@+id/layout_3" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_marginTop="3.0dip"    
        android:orientation="horizontal">
        <TextView 
            android:layout_width="70.0dip"
            android:textSize="20sp"
            android:textColor="@color/red"
            android:layout_height="wrap_content"
            android:text="@string/group"/>
        <EditText 
		    android:textSize="@dimen/text_size_2" 
		    android:layout_height="35.0dip" 
		    android:layout_width="0dip"
		    android:textColor="@color/black" 
		    android:id="@+id/id_groups" 
		    android:background="@drawable/search" 
		    android:paddingLeft="29.0dip" 
		    android:focusable="true" 
		    android:maxLines="1"
		    android:paddingRight="5.0dip"
		    android:hint="@string/id_group" 
		    android:layout_weight="0.9"  />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_4" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_marginTop="3.0dip"    
        android:orientation="horizontal">
        <TextView 
            android:layout_width="70.0dip"
            android:textSize="20sp"
            android:textColor="@color/red"
            android:layout_height="wrap_content"
            android:text="@string/name"/>
        <EditText 
		    android:textSize="@dimen/text_size_2" 
		    android:layout_height="35.0dip" 
		    android:layout_width="0dip"
		    android:textColor="@color/black" 
		    android:id="@+id/name_groups" 
		    android:background="@drawable/search" 
		    android:paddingLeft="29.0dip" 
		    android:focusable="true" 
		    android:maxLines="1"
		    android:paddingRight="5.0dip"
		    android:hint="@string/name_group" 
		    android:layout_weight="0.9"  />
        </LinearLayout>
     <LinearLayout
        android:id="@+id/layout_5" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_marginTop="3.0dip"    
        android:orientation="horizontal">
        <TextView 
            android:layout_width="70.0dip"
            android:textSize="20sp"
            android:textColor="@color/red"
            android:layout_height="wrap_content"
            android:text="@string/goods"/>
        <EditText 
		    android:textSize="@dimen/text_size_2" 
		    android:layout_height="35.0dip" 
		    android:layout_width="0dip"
		    android:textColor="@color/black" 
		    android:id="@+id/id_goods" 
		    android:background="@drawable/search" 
		    android:paddingLeft="29.0dip" 
		    android:focusable="true" 
		    android:maxLines="1"
		    android:paddingRight="5.0dip"
		    android:hint="@string/id_product" 
		    android:layout_weight="0.9"  />
        
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/layout_6" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_marginTop="3.0dip"    
        android:orientation="horizontal">
        <TextView 
            android:layout_width="70.0dip"
            android:textSize="20sp"
            android:textColor="@color/red"
            android:layout_height="wrap_content"
            android:text="@string/name"/>
        <EditText 
		    android:textSize="@dimen/test_size_4" 
		    android:layout_height="35.0dip" 
		    android:layout_width="0dip"
		    android:textColor="@color/black" 
		    android:id="@+id/name_goods" 
		    android:background="@drawable/search" 
		    android:paddingLeft="29.0dip" 
		    android:focusable="true" 
		    android:maxLines="1"
		    android:paddingRight="5.0dip"
		    android:hint="@string/name_product" 
		    android:layout_weight="0.9"  />
            </LinearLayout>
      <LinearLayout
        android:id="@+id/layout_7" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_marginTop="3.0dip"    
        android:orientation="horizontal">
        <TextView 
            android:layout_width="70.0dip"
            android:textSize="20sp"
            android:textColor="@color/red"
            android:layout_height="wrap_content"
            android:text="@string/sold"/>
        <EditText 
		    android:textSize="@dimen/text_size_2" 
		    android:layout_height="35.0dip" 
		    android:layout_width="0dip"
		    android:textColor="@color/black" 
		    android:id="@+id/sold" 
		    android:background="@drawable/search" 
		    android:paddingLeft="29.0dip" 
		    android:focusable="true" 
		    android:maxLines="1"
		    android:paddingRight="5.0dip"
		    android:hint="@string/sold" 
		    android:layout_weight="0.9"
		    android:inputType="number"  />
               
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_8" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_marginTop="3.0dip"    
        android:orientation="horizontal">
        <TextView 
            android:layout_width="70.0dip"
            android:textSize="20sp"
            android:textColor="@color/red"
            android:layout_height="wrap_content"
            android:text="@string/reserver_"/>
        <EditText 
		    android:textSize="@dimen/test_size_4" 
		    android:layout_height="35.0dip" 
		    android:layout_width="0dip"
		    android:textColor="@color/black" 
		    android:id="@+id/reserver" 
		    android:background="@drawable/search" 
		    android:paddingLeft="29.0dip" 
		    android:focusable="true" 
		    android:maxLines="1"
		    android:paddingRight="5.0dip"
		    android:hint="@string/reserver" 
		    android:layout_weight="0.9" 
		    android:inputType="number" />
          </LinearLayout>
        <LinearLayout
        android:id="@+id/layout_9" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_marginTop="3.0dip"    
        android:orientation="horizontal">
        <TextView 
            android:layout_width="70.0dip"
            android:textSize="20sp"
            android:textColor="@color/red"
            android:layout_height="wrap_content"
            android:text="@string/stock_"/>
        <EditText 
		    android:textSize="@dimen/test_size_4" 
		    android:layout_height="35.0dip" 
		    android:layout_width="0dip"
		    android:textColor="@color/black" 
		    android:id="@+id/stock_tranfer" 
		    android:background="@drawable/search" 
		    android:paddingLeft="29.0dip" 
		    android:focusable="true" 
		    android:maxLines="1"
		    android:paddingRight="5.0dip"
		    android:hint="@string/stock" 
		    android:layout_weight="0.9"
		    android:inputType="number"  />

    	</LinearLayout>
    	<LinearLayout
        android:id="@+id/layout_10" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_marginTop="3.0dip"    
        android:orientation="horizontal">
        <TextView 
            android:layout_width="70.0dip"
            android:textSize="20sp"
            android:textColor="@color/red"
            android:layout_height="wrap_content"
            android:text="@string/liq_"/>
        <EditText 
		    android:textSize="@dimen/text_size_2" 
		    android:layout_height="35.0dip" 
		    android:layout_width="0dip"
		    android:textColor="@color/black" 
		    android:id="@+id/liq" 
		    android:background="@drawable/search" 
		    android:paddingLeft="29.0dip" 
		    android:focusable="true" 
		    android:maxLines="1"
		    android:paddingRight="5.0dip"
		    android:hint="@string/liq" 
		    android:layout_weight="0.9"
		    android:inputType="number"  />
	    	</LinearLayout>
	    <Button android:id="@+id/btn_add"
	        android:layout_width="fill_parent"
	        android:layout_height="50.0dip"
	        android:layout_marginTop="5.0dip"
	        android:text="@string/create_product"
	        android:onClick="btnCreateProduct"
	        android:background="@drawable/searchbtn"/>
        </LinearLayout>        
    </ScrollView>
    
</LinearLayout >
