<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <TextView 
           android:id="@+id/lb_list_ware"
           android:layout_width="@dimen/textvew_width_2"
           android:layout_height="wrap_content"
           android:textSize="@dimen/text_size_1"
           android:gravity="left"
           android:layout_alignParentTop="true"
           android:text="@string/ware">          
       </TextView> 
       <TextView
           android:id="@+id/id_list_ware"
           android:layout_width="@dimen/textvew_width_2"
           android:layout_height="wrap_content" 
           android:layout_toRightOf="@+id/lb_list_ware"
           android:layout_alignParentTop="true"
           android:textSize="@dimen/text_size_1"
           android:gravity="left"
           android:lines="1"
           android:maxLines="1"
           android:textColor="@color/yellow"
           android:text="@string/id_ware"/>
       <TextView
           android:id="@+id/name_list_name_ware"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" 
           android:layout_toRightOf="@+id/id_list_ware"
           android:layout_alignParentTop="true"
           android:layout_alignParentRight="true"
           android:textSize="@dimen/text_size_1"
           android:gravity="left"
           android:lines="1"
           android:maxLines="1"
           android:textColor="@color/red"
           android:text="@string/name_ware"
           />
    
        <TextView 
           android:id="@+id/lb_list_group"
           android:layout_width="@dimen/textvew_width_2"
           android:layout_height="wrap_content"
           android:layout_below="@+id/lb_list_ware"
           android:textSize="@dimen/text_size_1"
           android:gravity="left"
           android:text="@string/group">          
       </TextView> 
       <TextView
           android:id="@+id/id_list_group"
           android:layout_width="@dimen/textvew_width_2"
           android:layout_height="wrap_content"
           android:layout_below="@+id/lb_list_ware" 
           android:layout_toRightOf="@+id/lb_list_group"
           android:textSize="@dimen/text_size_1"
           android:gravity="left"
           android:textColor="@color/yellow"         
           android:text="@string/id_group"/>
       <TextView
           android:id="@+id/name_list_name_group"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" 
           android:layout_below="@+id/lb_list_ware"
           android:layout_toRightOf="@+id/id_list_ware"
           android:layout_alignParentRight="true"
           android:textSize="@dimen/text_size_1"
           android:gravity="left"
           android:textColor="@color/red"
           android:text="@string/name_group"
           />

    	<TextView 
           android:id="@+id/lb_list_goods"
           android:layout_width="@dimen/textvew_width_2"
           android:layout_height="wrap_content"
           android:textSize="@dimen/text_size_1"
           android:layout_below="@+id/lb_list_group"
           android:gravity="left"
           android:text="@string/product">          
       </TextView> 
       <TextView
           android:id="@+id/id_list_goods"
           android:layout_width="@dimen/textvew_width_2"
           android:layout_height="wrap_content" 
           android:layout_toRightOf="@+id/lb_list_goods"
           android:layout_below="@+id/lb_list_group"
           android:textSize="@dimen/text_size_1"
           android:gravity="left"
           android:textColor="@color/yellow"
           android:text="@string/id_product"/>
       <TextView
           android:id="@+id/name_list_name_goods"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" 
           android:layout_toRightOf="@+id/id_list_goods"
           android:layout_below="@+id/lb_list_group"
           android:textSize="@dimen/text_size_1"
           android:gravity="left"
           android:textColor="@color/red"
           android:text="@string/name_product"
           />
       <TextView
           android:id="@+id/lb_list_sold"
           android:layout_width="@dimen/textvew_width_2"
           android:layout_height="wrap_content" 
           android:layout_below="@+id/lb_list_goods"
           android:layout_alignParentLeft="true"
           android:textSize="@dimen/text_size_1"
           android:gravity="left"
           android:text="@string/sold"
           />
      <TextView
           android:id="@+id/value_list_sold"
           android:layout_width="@dimen/textvew_width_2"
           android:layout_height="wrap_content" 
           android:layout_below="@+id/lb_list_goods"
           android:layout_toRightOf="@+id/lb_list_sold"          
           android:layout_alignBottom="@+id/lb_list_sold"
            android:layout_alignParentRight="true"
           android:textSize="@dimen/text_size_1"
           android:gravity="center"
           android:text="@string/sold"
           />
      
      <TextView
           android:id="@+id/lb_list_reserver"
           android:layout_width="@dimen/textvew_width_2"
           android:layout_height="wrap_content" 
           android:layout_below="@+id/lb_list_sold"
           android:layout_alignParentLeft="true"
           android:textSize="@dimen/text_size_1"
           android:gravity="left"
           android:text="@string/reserver"
           />
      <TextView
           android:id="@+id/value_list_reserver"
           android:layout_width="@dimen/textvew_width_2"
           android:layout_height="wrap_content" 
           android:layout_below="@+id/lb_list_sold"
           android:layout_toRightOf="@+id/lb_list_reserver"          
           android:layout_alignBottom="@+id/lb_list_reserver"
           android:layout_alignParentRight="true"
           android:textSize="@dimen/text_size_1"
           android:gravity="center"
           android:text="@string/reserver"
           />
      
      <TextView
           android:id="@+id/lb_list_stock"
           android:layout_width="@dimen/textvew_width_2"
           android:layout_height="wrap_content" 
           android:layout_below="@+id/lb_list_reserver"
           android:layout_alignParentLeft="true"
           android:textSize="@dimen/text_size_1"
           android:gravity="left"
           android:text="@string/stock"
           />
      <TextView
           android:id="@+id/value_list_stock"
           android:layout_width="@dimen/textvew_width_2"
           android:layout_height="wrap_content" 
           android:layout_below="@+id/lb_list_reserver"
           android:layout_toRightOf="@+id/lb_list_stock"          
           android:layout_alignBottom="@+id/lb_list_stock"
           android:layout_alignParentRight="true"
           android:textSize="@dimen/text_size_1"
           android:gravity="center"
           android:text="@string/stock"
           />
        <TextView
           android:id="@+id/lb_list_liq"
           android:layout_width="@dimen/textvew_width_2"
           android:layout_height="wrap_content" 
           android:layout_below="@+id/lb_list_stock"
           android:layout_alignParentLeft="true"
           android:textSize="@dimen/text_size_1"
           android:gravity="left"
           android:text="@string/liq"
           />
      <TextView
           android:id="@+id/value_list_liq"
           android:layout_width="@dimen/textvew_width_2"
           android:layout_height="wrap_content" 
           android:layout_below="@+id/lb_list_stock"
           android:layout_toRightOf="@+id/lb_list_liq"          
           android:layout_alignBottom="@+id/lb_list_liq"
           android:layout_alignParentRight="true"
           android:textSize="@dimen/text_size_1"
           android:gravity="center"  
           android:text="@string/liq"
           />

      <Button 
          android:id="@+id/btn_list_back"
          android:layout_width="fill_parent"
          android:layout_height="@dimen/button_height_1"
          android:layout_below="@+id/value_list_liq"
          android:textSize="@dimen/text_size_1"
          android:gravity="center"
          android:text="@string/back"/>
     
</RelativeLayout>
