<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <TableRow 
        android:id="@+id/table_row_1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <TextView 
            android:id="@+id/a"
            android:layout_width="@dimen/textvew_width_1"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textSize="@dimen/text_size_1"/>
        <TextView 
            android:layout_width="@dimen/textvew_width_4"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="@dimen/text_size_1"/>
       <TextView 
            android:layout_width="@dimen/textvew_width_3"
            android:layout_height="wrap_content"
            android:text="@string/sold_"
            android:textSize="@dimen/text_size_1"/>
       <TextView 
            android:layout_width="@dimen/textvew_width_3"
            android:layout_height="wrap_content"
            android:text="@string/reserver_"
            android:textSize="@dimen/text_size_1"/> 
        <TextView 
            android:layout_width="@dimen/textvew_width_3"
            android:layout_height="wrap_content"
            android:text="@string/stock_"
            android:textSize="@dimen/text_size_1"/>    
       <TextView 
            android:layout_width="@dimen/textvew_width_3"
            android:layout_height="wrap_content"
            android:text="@string/liq_"
            android:textSize="@dimen/text_size_1"/>                         
    </TableRow>
    <TableRow 
        android:id="@+id/table_row_2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <GridView 
            android:id="@+id/grid_list2_id"
            android:layout_width="@dimen/textvew_width_1"
            android:layout_height="wrap_content"
            android:numColumns="1"
            android:scrollbars="horizontal"
            ></GridView>
       <GridView 
            android:id="@+id/grid_list2_name"
            android:layout_width="@dimen/textvew_width_1"
            android:layout_height="wrap_content"
            android:numColumns="1"
       ></GridView>
       <GridView 
            android:id="@+id/grid_list2_sold"
            android:layout_width="@dimen/textvew_width_3"
            android:layout_height="wrap_content"
            android:numColumns="1"
       ></GridView>

       <GridView
           android:id="@+id/grid_list2_reserver"
           android:layout_width="@dimen/textvew_width_3"
           android:layout_height="wrap_content"

           android:numColumns="1" >
</GridView>
       <GridView 
            android:id="@+id/grid_list2_stock"
            android:layout_width="@dimen/textvew_width_3"
            android:layout_height="wrap_content"
            android:numColumns="1"
       ></GridView>
       <GridView 
            android:id="@+id/grid_list2_lid"
            android:layout_width="@dimen/textvew_width_3"
            android:layout_height="wrap_content"
            android:numColumns="1"
       ></GridView>      
    </TableRow>

</TableLayout>
